--- a/Public/Music/music.css
+++ b/Public/Music/music.css
@@ -38,7 +38,7 @@
 
 body{
     height: 100vh;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container{
     display: flex;
